Here I fixed some of the text and alignmennts (Mondli Khoza)

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 body{
-    background-color: #050a14;
+    background-color: #010305;
     color: aliceblue;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -105,7 +105,7 @@ nav{
   width: 92%;
   height: 32%;
   padding-bottom: 5rem;
-  h3{
+  h2{
       margin-left: 30px;
   }
 }
@@ -148,18 +148,21 @@ nav{
 }
 #skillsLang{
     display: flex;
-    gap: 30px;
+    gap: 20px;
     flex-wrap: wrap;
-    
 }
 
 #skillsLang span{
     background-color: rgb(2, 4, 20);
     text-align: center;
-    width: 120px;
-    height: 40px;
+    width: fit-content;
+    height: 30px;
     border-radius: 80px;
-    font-size: 25px;
+    font-size: 20px;
+    border-style: solid;
+    border-top-width: 0.5px;
+    border-color: #fcfcfc2f;
+    padding: 0px 2px 0px 10px;
 
 }
 #skills img{
@@ -199,13 +202,15 @@ nav{
   text-align: center;
   color: #fcfcfc;
    a{
-  text-decoration: none;
-  padding: 10px 20px;
-  background: #007bff;
-  color: white;
-  border-radius: 5px;
-  display: inline-block;
-  transition: background 0.2s;
+      text-decoration: none;
+      padding: 10px 20px;
+      background: #007bff31;
+      color: white;
+      border-radius: 5px;
+      display: inline-block;
+      transition: background 0.2s;
+      border-color: #007bff;
+      border-width: 4px;
 }
 img{
     width: 300px;
@@ -224,7 +229,7 @@ img{
   h2 {
   text-align: center;
   margin-bottom: 30px;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 }
 
@@ -236,16 +241,20 @@ img{
 }
 
 .experience-card {
+  background: #0057b300;
   width: 700px;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 5px 5px 5px 4px black;
   text-shadow: 1px 1px 1px black;
+  border-style: ridge;
+  border-width: 0.2px;
+  font-size: 1.2rem;
 }
 
 .experience-card h3 {
   margin-top: 0;
-  color: #005f99;
+  color: #2d42fa;
 }
 .experience-card ul {
   padding-left: 20px;
